src/test/deca/context/invalid/test_inexistent_superclass.deca
// Description:
//    Programme testant une superclasse qui n'existe pas
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
// Resultats:
//    test_context : erreur ligne 9 : The class A doesn't have a superclass or no exist
class A  extends B {

}

{
	A a = new A();
	println("hello");
	
}
